--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,6 +56,20 @@ jobs:
         run: |
           pytest -m regression --alluredir=allure-results --numprocesses 2
 
+      - name: Save allure results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-dir
+          path: |
+            /allure-results
+  
+  
+  
+  publish-reports:
+    needs: run-tests
+    runs-on: ubuntu-latest  # Указываем, что тесты будут запускаться на последней версии Ubuntu
+
+    steps:
       # 8. Шаг для получения истории отчётов Allure, если она существует
       - name: Get Allure history
         uses: actions/checkout@v6  # Опять клонируем репозиторий, чтобы получить историю отчётов
@@ -64,6 +78,11 @@ jobs:
         with:
           ref: gh-pages  # Указываем ветку gh-pages для получения отчётов
           path: gh-pages  # Указываем путь для сохранения отчётов
+
+      - name: Download Allure results
+        uses: actions/download-artifact@v5
+        with:
+          name: allure-dir
 
       # 9. Шаг для генерации и отображения отчёта Allure
       - name: Generates Allure Report with history
