Запуск автотестов на GitHub Actions. Практика работы с GitHub Actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           name: allure-dir
           path: |
-            /allure-results
+            allure-results/
   
   
   
