--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,9 +59,8 @@ jobs:
       - name: Save allure results
         uses: actions/upload-artifact@v4
         with:
-          name: allure-dir
-          path: |
-            allure-results/
+          name: allure-results
+          path: allure-results
   
   
   
@@ -70,6 +69,15 @@ jobs:
     runs-on: ubuntu-latest  # Указываем, что тесты будут запускаться на последней версии Ubuntu
 
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v6  # Используем GitHub Action для клонирования репозитория
+
+      - name: Download Allure results
+        uses: actions/download-artifact@v7
+        with:
+          name: allure-results
+          path: allure-results
+
       # 8. Шаг для получения истории отчётов Allure, если она существует
       - name: Get Allure history
         uses: actions/checkout@v6  # Опять клонируем репозиторий, чтобы получить историю отчётов
@@ -78,11 +86,6 @@ jobs:
         with:
           ref: gh-pages  # Указываем ветку gh-pages для получения отчётов
           path: gh-pages  # Указываем путь для сохранения отчётов
-
-      - name: Download Allure results
-        uses: actions/download-artifact@v7
-        with:
-          name: allure-dir
 
       # 9. Шаг для генерации и отображения отчёта Allure
       - name: Generates Allure Report with history
